changed spacings around skills icons. fixed right margin bug. added linkedin icon to contact form.

--- a/style/modules/tech_skills.css
+++ b/style/modules/tech_skills.css
@@ -5,9 +5,8 @@ main .skills .banner {
   margin-top: 50px;
 }
 main .skills .skills-icons {
-  margin-bottom: 50px;
-  margin-top: 50px;
   width: 90%;
+  margin-top: 0px;
   text-align: center;
   max-width: 700px;
 }
